service: fix sessionlog bugs, add api for user and report routes
